--- a/Juego-poke/style-juego.css
+++ b/Juego-poke/style-juego.css
@@ -82,6 +82,12 @@ footer{
     padding: .5rem;
 }
 
+#mensaje{
+    text-align: center;
+    font-size: 1.5rem;
+    padding: .5rem;
+}
+
 img{
     width: 80%;
 }
