--- a/Juego-poke/style-juego.css
+++ b/Juego-poke/style-juego.css
@@ -28,6 +28,7 @@ main{
 h1{
     text-align: center;
     padding-bottom: 1.5rem;
+    padding-top: 1rem;
 }
 
 h2{
@@ -92,5 +93,60 @@ img{
     width: 80%;
 }
 
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.button {
+    position: relative;
+    padding: 1em 1.5em;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+    font-size: 18px;
+    margin: 1em 0.8em;
+  }
+
+  .button.type3 {
+    color: #ffffff;
+  }
+  .button.type3.type3::after, .button.type3.type3::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 20%;
+    height: 20%;
+    border: 2px solid;
+    transition: all 0.6s ease;
+    border-radius: 2px;
+  }
+  .button.type3.type3::after {
+    bottom: 0;
+    right: 0;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: #bababa;
+    border-right-color: #bababa;
+  }
+  .button.type3.type3::before {
+    top: 0;
+    left: 0;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    border-top-color: #bababa;
+    border-left-color: #bababa;
+  }
+  .button.type3.type3:hover:after, .button.type3.type3:hover:before {
+    border-bottom-color: #bababa;
+    border-right-color: #bababa;
+    border-top-color: #bababa;
+    border-left-color: #bababa;
+    width: 100%;
+    height: 100%;
+  }
 
 
